Bug 31805 - Deleting a column or row from merged cells
Summary: Deleting a column or row from merged cells
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: x86 (IA32) All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3 target:6.3.0
Keywords:
: 57457 (view as bug list)
Depends on:
Blocks: Calc-Merge-Split 31865
  Show dependency treegraph
 
Reported: 2010-11-20 21:45 UTC by Saaz Rai
Modified: 2019-05-15 12:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot - Before and after deleting a column from merged cells (73.95 KB, image/png)
2010-11-20 21:45 UTC, Saaz Rai
Details
sample document (8.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2010-11-21 03:02 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saaz Rai 2010-11-20 21:45:14 UTC
Created attachment 40444 [details]
Screenshot - Before and after deleting a column from merged cells

With OO 3.3 we are able to insert and delete columns and rows in a
merged cells in Calc. However, deleting a column or a row from merged
cells results in the remaining cells not being merged anymore, also
sometimes losing the existing text.

Steps to recreate this:
1. Merge 3x3 cells. (Can be any no of cells)
2. Insert some text. (Not really required)
3. Delete a row or a column from the merged cell.
4. This will result in the remaining cells to lose out on the merged format. The text may also be deleted.

This issue is not in the original OO 3.2/3.3 released by Sun/Oracle but is
in GoOo/LibreOffice which has affected Ubuntu and other distros using GoOo.
Confirming the issue in the latest LibreOffice 3.3 Beta 3. Issue existed in Windows version also.

https://bugs.launchpad.net/ubuntu/+source/openoffice.org/+bug/558968
Comment 1 Rainer Bielefeld Retired 2010-11-21 02:59:28 UTC
[Reproducible] with "LibreOffice 3.3.0Beta3 - WIN XP DE [OOO330m9 (build 3.2.99.2)]"
You can compare different behaviour of various OOo and LibO versions using attached "sample.ods":

1. open "sample.ods"
2. click 'G1'
3. Menu 'edit -> Celete Cell - Delete entire Column'
   expected: Column with cell containing "g" will be deleted, 
             a merged cell range will remain
   actual OOo 3.1.1: Impossible: Message "You can not delete merged ranges"
   actual LibO Beta3: column deleted, but merged cells range destroyed 
                      (as reported)
   actual OOo 3.4-dev: as expected

We should get the same behaviour as OOo 3.4
Comment 2 Rainer Bielefeld Retired 2010-11-21 03:02:31 UTC
Created attachment 40446 [details]
sample document
Comment 3 Kohei Yoshida 2010-11-21 07:38:47 UTC
Yup, sorry Saaz.  I know you've been mailing me about this one.

Now that we have a bug report for this one, I'll finally get this taken care of for 3.3.
Comment 4 Kohei Yoshida 2010-11-30 06:38:37 UTC
This is a regression from OOo and I nominate this as a show stopper.
Comment 5 Kohei Yoshida 2010-11-30 11:00:33 UTC
Found the cause and fixed it.  It should be good to go for 3.3.

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-3&id=6683ad4daa97331d1ce06136421cd8ec56190b24
Comment 6 sophie 2011-01-13 03:36:16 UTC
Verified - Closed - Sophie
Comment 7 Joel Madero 2013-02-11 03:51:38 UTC
*** Bug 57457 has been marked as a duplicate of this bug. ***
Comment 8 Joel Madero 2013-02-11 03:54:35 UTC
As as a comment to 57457, I can only reproduce if I delete the 1st row (if I merge 3x3 from A1 to C3). If I delete row 1, the content is deleted and the merge goes away. If I delete Rows 2 or 3, things seem fine. This may be as expected.

Kohei - can I get your feedback on this?
Comment 9 Commit Notification 2018-12-11 19:51:42 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/23b6c876180b5fc7b124f8116a350a9b9066e1f6%5E%21

uitest for bug tdf#31805

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.