Don't forget to store sheet index of merged cell range to be re-merged.

This fixes fdo#31805.